2006-11-29  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Dap/DapCore.cs: Use volume.fsusage=filesystem instead
	of volume.policy.should_mount

2006-11-29  Aaron Bockover  <abock@gnome.org>

	* configure.ac: Use Shamrock expansion macros

	* build/Makefile.am:
	* build/m4/Makefile.am: Added Makefile to EXTRA_DIST the m4 macros

	* data/images/Makefile.am: 
	* src/BooBuddy/Makefile.am: Add missing files to EXTRA_DIST

2006-11-27  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Dap/DapCore.cs: Added some debug logging calls; respect
	volume.ignore

2006-11-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Dap/MassStorage/MassStorageDap.cs: Trim white space from
	directory names to prevent bug.  Fixes BGO #375146.

2006-11-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Base/ImportManager.cs: Expose label strings as public
	properties.

	* src/Banshee.Dap/MassStorage/MassStorageDap.cs: Set the strings for the
	ImportManager to make it clear that the songs are being loaded, not
	imported from the DAP. Fixes BGO #355880.

2006-11-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Dap/MassStorage/MassStorageDap.cs: Lazy load several HAL
	properties that won't change instead of going over the dbus to get them
	every time, fixing the managed-dbus related crashes. Allow overriding the
	HAL properties (or setting them in case they are missing) in key=value
	form within the .is_audio_player file.  Display folder depth, audio
	folders, and playback formats in the DAP properties. Use LogCore instead
	of Console.WriteLine's in several places.

2006-11-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Dap/MassStorage/MassStorageDap.cs: Silently ignore iPods so
	as not to confuse the user if iPod support isn't installed or their iPod
	isn't recognized by it. Fixes BGO #355890.

2006-11-27  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Dap/DapCore.cs: Work with the new PropertyModified